# rental-broker-assistant

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: pyproject.toml  test_extractor.py  test_match.py  test_search.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: available_ads.py  chat.py  extraction.py  health.py  matching.py  needed_ads.py  search.py
backend/app/core/: config.py
backend/app/domain/available_ads/: schemas.py  service.py
backend/app/domain/extraction/: prompts.py  schemas.py  service.py
backend/app/domain/matching/: schemas.py  service.py
backend/app/domain/needed_ads/: schemas.py  service.py
backend/app/domain/normalization/: dictionaries.py  service.py
backend/app/infrastructure/db/: session.py
backend/app/infrastructure/db/models/: __init__.py  audit_log.py  available_ad.py  match.py  needed_ad.py
backend/app/infrastructure/llm/: gemini_client.py  groq_client.py  openrouter_client.py  structured_extractor.py
backend/requirements/: base.txt  dev.txt
backend/scripts/db/: clear_seeds.py
backend/tests/unit/: test_matching.py
frontend/src/: App.tsx  index.css
frontend/src/features/available-ads/components/: AvailableAdForm.tsx  AvailableAdPanel.tsx
frontend/src/features/needed-ads/components/: NeededAdForm.tsx  NeededAdPanel.tsx
frontend/src/features/search-match/components/: ChatSearchPanel.tsx  MatchingDashboard.tsx  (+1 more)
frontend/src/lib/api/: client.ts
scripts/db/: init_db.py  seed_data.py
scripts/setup/: setup_frontend.sh
